<resources>
    <string name="app_name">Just Java</string>
    <string name="name_text">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank you!</string>
    <string name="add_whipped">Add whipped cream?</string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="total">Total: $</string>
    <string name="order_email_subject">Just Java order for</string>
</resources>
